--- a/default.yml
+++ b/default.yml
@@ -1,7 +1,7 @@
 cache_dir: cache          # Path to HuggingFace cache directory, default 'cache'
 max_models: 1             # Maximal number of models in memory, default '1'
 use_cuda: true            # 'true' to use GPU if available, default 'true'
-use_float16: true         # 'true' to use 'float16' for calculations, default 'true'
+use_float16: true         # 'true' to use 'float16' for inference, default 'true'
 
 # List of some diffusers pipelines
 repo_history:
